--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -30,7 +30,7 @@
                 android:layout_width="125dp"
                 android:layout_height="125dp"
                 android:layout_marginTop="25dp"
-                android:src="@drawable/ic_login"
+                android:src="@drawable/ic_logo"
                 app:civ_border_color="@color/black"
                 app:civ_border_width="5dp" />
 
